add: allow swagger on cors